# dynamical-catalog

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: integration.yml  publish.yml  test.yml
examples/: 01_quickstart.py  02_list_datasets.py  03_get_store.py  04_forecast.py  04_icechunk.py  05_icechunk.py  06_ensemble.py  06_precipitation.py  07_precipitation.py
plans/: 1_integration_test_freshness.md  2_aifs_ens_source_exploration.md  draft_integration_test_freshness.md  exceptions.md  exceptions_and_malformed_input.md
src/dynamical/: __init__.py  _catalog.py  _dataset_entry.py  _open.py  _stac.py
src/dynamical_catalog/: __init__.py  _catalog.py  _dataset_entry.py  _open.py  _stac.py  exceptions.py
tests/: conftest.py  test_api.py  test_catalog.py  test_integration.py  test_open.py  test_stac.py  test_virtual_open.py
