[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynamical"
version = "0.1.0"
description = "Load dynamical.org weather datasets in one line"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "dynamical.org", email = "feedback@dynamical.org" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "xarray>=2025.1.2",
    "zarr>=3.0.8",
    "fsspec",
    "aiohttp",
]

[project.urls]
Homepage = "https://dynamical.org"
Repository = "https://github.com/dynamical-org/dynamical-py"
Catalog = "https://dynamical.org/catalog/"
Issues = "https://github.com/dynamical-org/dynamical-py/issues"

[project.optional-dependencies]
icechunk = ["icechunk>=1.0.0"]
dev = ["pytest", "pytest-mock"]

[tool.hatch.build.targets.wheel]
packages = ["src/dynamical"]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow (hit real network, run with pytest -m slow)",
]
