[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynamical-catalog"
version = "0.4.0"
description = "Load dynamical.org weather datasets in one line"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "dynamical.org", email = "feedback@dynamical.org" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "xarray>=2025.1.2",
    "zarr>=3.0.8",
    "icechunk>=2.0.0",
]

[project.urls]
Homepage = "https://dynamical.org"
Repository = "https://github.com/dynamical-org/dynamical-catalog"
Catalog = "https://dynamical.org/catalog/"
Issues = "https://github.com/dynamical-org/dynamical-catalog/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/dynamical_catalog"]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow (hit real network, run with pytest -m slow)",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["zarr.*", "icechunk.*"]
ignore_missing_imports = true
